# automated_grading

./: LICENSE  README.md
.github/classroom/: autograding.json
c/: README.md  sum_to.c  sum_to_test.c
cpp/: CMakeLists.txt  README.md  sum_to.cpp  sum_to_test.cpp
py/: README.md  sum_to.py  sum_to_test.py
